<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.abdelrahman.myshoppal.ui.ui.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.abdelrahman.myshoppal.ui.ui.ui.fragments.ProductsFragment"
        android:label="@string/title_Products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.abdelrahman.myshoppal.ui.ui.ui.fragments.OrdersFragment"
        android:label="@string/title_Orders"
        tools:layout="@layout/fragment_orders" />
</navigation>